--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,7 +35,7 @@ def imagePrune(containerName){
 }
 
 def imageBuild(containerName,tag){
-    sh "docker build -t $containerName:$tag -t containerName --pull --no-cache ."
+    sh "docker build -t $containerName:$tag -t $containerName --pull --no-cache ."
     echo "Image build complete"
 }
 
