--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,7 +17,7 @@ node {
     }
 
     stage ('Push to Docker Registry') {
-        withCredentials([usernamePassword(credntialsID: 'dockerHubAccount', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')])
+        withCredentials([usernamePassword(credentialsId: 'dockerHubAccount', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')])
         pushToImage(CONTAINER_NAME, CONTAINER_TAG, USERNAME, PASSWORD)
     }
 
