--- a/JenkinsFile
+++ b/JenkinsFile
@@ -42,8 +42,8 @@ def imageBuild(containerName,tag){
 
 def pushToImage(containerName,tag,dockerUser,dockerPassword){
     sh "docker login -u $dockerUser -p $dockerPassword"
-    sh "docker tag $containerName:$tag $dokcerUser/$containerName:$tag"
-    sh "docker push $dokceruser/$contianerName:$tag"
+    sh "docker tag $containerName:$tag $dockerUser/$containerName:$tag"
+    sh "docker push $dockeruser/$contianerName:$tag"
     echo "Image push complete"
 }
 
