--- a/JenkinsFile
+++ b/JenkinsFile
@@ -43,7 +43,7 @@ def imageBuild(containerName,tag){
 def pushToImage(containerName,tag,dockerUser,dockerPassword){
     sh "docker login -u $dockerUser -p $dockerPassword"
     sh "docker tag $containerName:$tag $dockerUser/$containerName:$tag"
-    sh "docker push $dockeruser/$contianerName:$tag"
+    sh "docker push $dockerUser/$contianerName:$tag"
     echo "Image push complete"
 }
 
