--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,7 +22,7 @@ node {
         }
     }
 
-    stage (Run App) {
+    stage ('Run App') {
         runApp(CONTAINER_NAME,CONTAINER_TAG,DOCKER_HUB_USER,HTTP_PORT)
     }
 }
