--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,7 +2,7 @@ def CONTAINER_NAME="python-prj"
 def CONTAINER_TAG="latest"
 def DOCKER_HUB_USER="santhoshdoc"
 def HTTP_PORT="1010"
-def DOCKER_PORT="4000"
+def CONTAINER_PORT="4000"
 
 node {
     stage ('Checkout') {
@@ -24,7 +24,7 @@ node {
     }
 
     stage ('Run App') {
-        runApp(CONTAINER_NAME,CONTAINER_TAG,DOCKER_HUB_USER,HTTP_PORT)
+        runApp(CONTAINER_NAME,CONTAINER_TAG,DOCKER_HUB_USER,HTTP_PORT,CONTAINER_PORT)
     }
 }
 
@@ -48,8 +48,8 @@ def pushToImage(containerName,tag,dockerUser,dockerPassword){
     echo "Image push complete"
 }
 
-def runApp(containerName, tag, dockerHubUser, httpPort){
+def runApp(containerName, tag, dockerHubUser, httpPort,containerPort){
     sh "docker pull $dockerHubUser/$containerName"
-    sh "docker run -d --rm -p $httpPort:$DOCKER_PORT --name $containerName $dockerHubUser/$containerName:$tag"
+    sh "docker run -d --rm -p $httpPort:$containerPort --name $containerName $dockerHubUser/$containerName:$tag"
     echo "Application started on port ${httpPort} (http)"
 }
